--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <!-- 禁止用户缩放 -->
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <!-- 重置css样式 -->
-    <link rel="stylesheet"  type="text/css" href="./static/reset.css"> 
-    <title>e_takeout_fe</title>
+    <link rel="stylesheet"  type="text/css" href="./static/reset.css">
+    <title>我饿了</title>
   </head>
   <body>
     <div id="app"></div>
