--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet"  type="text/css" href="./static/reset.css">
     <title>我饿了</title>
   </head>
-  <body>
+  <body style="touch-action: none">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
